# full-stack-copilot

./: .gitignore  README.md  pyproject.toml
diagrams/: migration.mmd
iac/: api-infrastructure.tf  compute.tf  storage.tf
src/: lambda_function.py  thing_dao.py  thing_service.py
tests/: test_thing_service.py
