[project]
name = "full-stack-copilot"
version = "0.1.0"
description = ""
authors = [
    {name = "Bradley Mickunas",email = "bmickunas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.37.25,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
